--- a/MXBikesSetupDuperWPF/MXBikesSetupDuperWPF.csproj
+++ b/MXBikesSetupDuperWPF/MXBikesSetupDuperWPF.csproj
@@ -11,6 +11,7 @@
     <Version>1.0.0</Version>
     <AssemblyVersion>0.1.*</AssemblyVersion>
     <Deterministic>false</Deterministic>
+    <ApplicationIcon>mxbsd.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
