--- a/MXBikesSetupDuperWPF/MXBikesSetupDuperWPF.csproj
+++ b/MXBikesSetupDuperWPF/MXBikesSetupDuperWPF.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="ModernWpfUI" Version="0.9.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
