minor changes, added github link

--- a/MXBikesSetupDuperWPF/MXBikesSetupDuperWPF.csproj
+++ b/MXBikesSetupDuperWPF/MXBikesSetupDuperWPF.csproj
@@ -5,16 +5,19 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <SignAssembly>False</SignAssembly>
+    <SignAssembly>True</SignAssembly>
     <Authors>dmkrtz</Authors>
     <Product>MX Bikes Setup Duper</Product>
     <Version>1.0.0</Version>
     <AssemblyVersion>0.1.*</AssemblyVersion>
     <Deterministic>false</Deterministic>
     <ApplicationIcon>mxbsd.ico</ApplicationIcon>
+    <AssemblyName>MX_Bikes_Setup_Duper</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="github.png" />
+    <None Remove="logo_2021_100.png" />
     <None Remove="logo_2021_512.png" />
   </ItemGroup>
 
@@ -28,6 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="github.png" />
+    <Resource Include="logo_2021_100.png" />
     <Resource Include="logo_2021_512.png" />
   </ItemGroup>
 
